   Re-write elimination of PrimaryKey field from repeatable value,
       add 'no_value_if_empty' attribute
   Fix bug with labels '0' not being displayed
   Change 'missing' to an attribute.

0.40012 Fri Jun 15, 2012
   Bug cloning merging repeatable instances; form reference garbage collected
   Doc typos

0.40011 Tue Jun 5, 2012
   Remove automatic building of field results. If you have field tests, you
      need to add $field->build_result after creating field with 'new'.
      Possible memory cycle if result is accessed when not built.
   Add 'required_when'
   Add Bulgarian message file (dpetrov)
   Bootstrap input_append/prepend: no linefeeds between input
   Add input_append_button tag to Bootstrap wrapper
   Correct camelcase for widgets in two fields
   Add 'value_when_empty' for multiple select
   Add SelectCSV multiple field
   Change Select to use sort_options_method for sorting

0.40010 Sun May 20, 2012
   Add 'when' clause to apply actions
   Fix memory leak on fields with defaults due to missing 'my' causing
   $self to be closed over so that RAM was leaked if forms were constructed
   but never processed. (in default_<field_name> & validate_<field_name>
   methods)

0.40009 Mon May 14, 2012
    Re-implement improved version of 'reload_after_update'.

0.40008 Fri May 11, 2012
    Add 'missing' method to Field
    Use result in Bootstrap render_form_messages
    Fix Render::Table
    Propagate errors when they're added, so $form->has_errors
        works in sub validate
    Use do_render_label in Bootstrap wrapper to allow setting
        label class/attributes
    Add subfield convenience method.
    Remove 'reload_after_update'. Didn't work anyway. Bug: duplicate
        results with repeatables. (avoid with reload_after_update => 0)
    Re-factor RadioGroup widget to allow individually rendered options
    Support option groups in 'Select', 'RadioGroup' & 'CheckboxGroup' widgets

0.40007 Tues Apr 24, 2012