@@ -2,6 +2,7 @@
        add 'no_value_if_empty' attribute
    Fix bug with labels '0' not being displayed
    Change 'missing' to an attribute.
+   Submit field has 'submit' html5_type_attr
 
 0.40012 Fri Jun 15, 2012
    Bug cloning merging repeatable instances; form reference garbage collected
